Delete old code / extract test logic / fix RandomAccess assertions